--- a/formaz.css
+++ b/formaz.css
@@ -24,3 +24,17 @@ body
     left: 200px;
 
 }
+
+#fix
+{
+    background-color: yellow;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    color: red;
+    font-size: 42px;
+    text-align: center;
+    position: fixed;
+    bottom: 15px;
+    right: 10pxs;
+}
